Fixed sizes and spacing

--- a/src/main.scss
+++ b/src/main.scss
@@ -241,11 +241,13 @@ body {
     }
 
     .playWithFriendsImg {
-        max-width: 100%;
+        width: 100%;
+        max-width: 800px;
     }
 
     .playOnlineImg {
-        max-width: 100%;
+        width: 100%;
+        max-width: 800px;
     }
 
     h4 {
@@ -262,24 +264,26 @@ body {
     }
 
     button {
-        display: block;
-        margin: 2rem 0 3rem 1.5rem;
-        background-color: #E3170A;
-        color: #FFFFFF;
-        font-family: "Roboto";
-        font-size: 1.4rem;
-        font-weight: bold;
-        text-align: center;
-        border: none;
-        padding: 1rem 2.8rem 1rem 2.8rem;
-        border-radius: 4px;
-        align-self: flex-end;
+        @include onlineBtn();
+        display: flex;
+        margin-left: 1.5rem;
+        margin-bottom: 3rem;
+
+        a:link,
+        a:visited,
+        a:active {
+            @include linkStyle(#FFFFFF, none);
+            @include btnClickArea();
+        }
+
+        
     }
 
 }
 
 footer {
-    padding: 2rem 2.5rem 4rem 1rem;
+    padding: 0.5rem 2.5rem 4rem 1rem;
+    margin-top: 5rem;
     background-color: #011827;
     text-align: left;
     color: #FFFFFF;
@@ -302,6 +306,7 @@ footer {
     }
 
     ul {
+        margin-top: 0.5em;
         list-style: none;
         text-align: left;
         padding-left: 0;
@@ -366,6 +371,21 @@ footer {
         }
     }
 
+    .btnContainer {
+        button {
+            display: inline-block;
+            margin-inline: 0.4rem;
+            margin-top: 2rem;
+            a {
+                font-size: 1.4rem;
+            }
+    }
+}
+    .containerReviews {
+        margin: 0 1rem 0 3rem;
+        padding-left: 2rem;
+    }
+
     .onlineLink:link,
     .onlineLink:visited,
     .onlineLink:active {
@@ -402,6 +422,7 @@ footer {
         .flexContainer {
             display: grid;
             grid-template-columns: 1fr;
+            grid-template-rows: 2fr;
             gap: 1rem;
         }
 
